src/main/java/com/example/demo3/_core/errors/Exception401.java
package com.example.demo3._core.errors;

public class Exception401 extends RuntimeException {

    public Exception401(String msg) {
        super(msg);
    }
}
